--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -19,6 +19,6 @@
 <script src="{% static 'shoplist/js/components/Favorites.js' %}"></script>
 <script src="{% static 'shoplist/js/config/config.js' %}"></script>
 <script src="{% static 'shoplist/js/api/Api.js' %}"></script>
-<script src="{% static 'js/components/CardList.js' %}"></script>
-<script src="{% static 'favorite.js' %}"></script>
+<script src="{% static 'shoplist/js/components/CardList.js' %}"></script>
+<script src="{% static 'shoplist/favorite.js' %}"></script>
 {% endblock %}
