--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -55,7 +55,11 @@
                 {% endif %}
 
                 {% if user.is_authenticated %}
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+                    {% if follow %}
+                        <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe button_style_blue" name="subscribe">Отписаться от автора</button></li>
+                    {% else %}
+                        <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+                    {% endif %}
                 {% endif %}
             </ul>
             <div class="single-card__section">
