--- a/templates/includes/main_header.html
+++ b/templates/includes/main_header.html
@@ -2,15 +2,36 @@
     <h1 class="main__title">Рецепты</h1>
     <ul class="tags">
         <li class="tags__item">
-            <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="#"></a>
+            <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange
+                {% if 'breakfast' in tag %}
+                    tags__checkbox_active
+                {% else %}
+                    tags__checkbox
+                {% endif %}
+                "
+               href="{% url 'index' %}?tag=breakfast"></a>
             <span class="tags__label">Завтрак</span>
         </li>
         <li class="tags__item">
-            <a id="lunch" class="tags__checkbox tags__checkbox_style_green tags__checkbox_active" href="#"></a>
+            <a id="lunch" class="tags__checkbox tags__checkbox_style_green
+                {% if 'lunch' in tag %}
+                    tags__checkbox_active
+                {% else %}
+                    tags__checkbox
+                {% endif %}
+                "
+                href="{% url 'index' %}?tag=lunch"></a>
             <span for="lunch" class="tags__label">Обед</span>
         </li>
         <li class="tags__item">
-            <a id="dinner" class="tags__checkbox tags__checkbox_style_purple tags__checkbox_active" href="#"></a>
+            <a id="dinner" class="tags__checkbox tags__checkbox_style_purple
+                {% if 'dinner' in tag %}
+                    tags__checkbox_active
+                {% else %}
+                    tags__checkbox
+                {% endif %}
+                "
+                href="{% url 'index' %}?tag=dinner"></a>
             <label for="dinner" class="tags__label">Ужин</label>
         </li>
     </ul>
