--- a/templates/old_templates/formRecipeTagOld.html
+++ b/templates/old_templates/formRecipeTagOld.html
@@ -20,24 +20,24 @@
                 </div>
             </div>
             <div class="form__group">
-                  <p class="form__label">Теги</p>
-                  <div class="form__field-group">
-                        <div class="tags">
-                              {% for tag in form.fields.tags.choices.queryset %}
-                                    <div class="tags__item">
-                                      <input
-                                        type="checkbox"
-                                        name="tags"
-                                        id="id_{{ tag.name }}"
-                                        class="tags__checkbox tags__checkbox_style_{{ tag.color }}"
-                                        value="{{ tag.pk }}"
-                                        {% if tag.pk in form.tags.value %}checked{% endif %}>
-                                      <label for="id_{{ tag.name }}" class="tags__label">{{ tag.display_name }}</label>
-                                    </div>
-                              {% endfor %}
+                <p class="form__label">Теги</p>
+                <div class="form__field-group">
+                    <div class="tags">
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ form.tag.name }}" value="breakfast" id="id_tag_0" class="tags__checkbox tags__checkbox_style_orange">
+                            <label for="id_tag_0" class="tags__label">Завтрак</label>
                         </div>
-                    <span class="form__error">{{ form.tags.errors }}</span>
-                  </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ form.tag.name }}" value="lunch" id="id_tag_1" class="tags__checkbox tags__checkbox_style_green">
+                            <label for="id_tag_1" class="tags__label">Обед</label>
+                        </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ form.tag.name }}" value="dinner" id="id_tag_2" class="tags__checkbox tags__checkbox_style_purple">
+                            <label for="id_tag_2" class="tags__label">Ужин</label>
+                        </div>
+                    </div>
+                    <span class="form__error">{{ form.tag.errors }}</span>
+                </div>
             </div>
             <div class="form__group">
                 <label for="nameIngredient" class="form__label">Ингредиенты</label>
