--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -43,7 +43,7 @@
                 <ul class="single-card__items">
                     <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> {{ object.author }}</p></li>
                     {% if user.is_authenticated %}
-                    <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>
+                    <li class="single-card__item">  <a style="margin-left: 2.5em" href="{{ object.get_absolute_url }}edit/" class="single-card__text">Редактировать рецепт</a></li>
                     {% endif %}
                 </ul>
             </div>
