--- a/templates/includes/card_list.html
+++ b/templates/includes/card_list.html
@@ -6,14 +6,8 @@
         <div class="card__body">
             <a class="card__title link" href="{{ recipe.get_absolute_url }}" target="_blank">{{ recipe.title }}</a>
             <ul class="card__items">
-                {% for tag in recipe.tag %}
-                    {% if tag == 'breakfast' %}
-                        <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-                    {% elif tag == 'lunch' %}
-                        <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-                    {% else %}
-                        <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
-                    {% endif %}
+                {% for tag in recipe.tags.all %}
+                        <li class="card__item"><span class="badge badge_style_{{tag.color}}"> {{tag.name}} </span></li>
                 {% endfor %}
             </ul>
             <div class="card__items card__items_column">
