--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -65,12 +65,9 @@
             <div class="single-card__section">
                 <h3 class="single-card__section-title">Ингридиенты:</h3>
                 <div class="single-card__items single-card__items_column">
-                    <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                    <p class=" single-card__section-item">Молоко - 200 мл.</p>
-                    <p class=" single-card__section-item">Тосты - 4 шт.</p>
-                    <p class=" single-card__section-item">Сахар 2 сл.л.</p>
-                    <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                    <p class=" single-card__section-item">Молоко - 200 мл.</p>
+                    {% for ingredient in object.ingredients.all %}
+                        <p class=" single-card__section-item"> {{ ingredient.title }} - {{ ingredient.quantities.all.0.quantity }} {{ ingredient.dimension }}</p>
+                    {% endfor %}
                 </div>
             </div>
             <div class="single-card__section">
