--- a/templates/formRecipe.html
+++ b/templates/formRecipe.html
@@ -7,7 +7,7 @@
 {% block main %}
 <main class="main container">
     <div class="main__header">
-        <h1 class="main__title">Создание рецепта</h1>
+        <h1 class="main__title">{{ labels.main_title }}</h1>
     </div>
     <div class="form-container">
         <form class="form" method="post" enctype="multipart/form-data">
@@ -15,7 +15,7 @@
             <div class="form__group">
                 <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
-                    <input type="text" id="{{ form.title.id_for_label }}" name="{{ form.title.name }}" class="form__input">
+                    <input type="text" id="{{ form.title.id_for_label }}" name="{{ form.title.name }}" value="{{ form.title.value|default_if_none:'' }}" class="form__input">
                     <span class="form__error">{{ form.title.errors }}</span>
                 </div>
             </div>
@@ -52,7 +52,15 @@
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
                     <div class="form__field-group-ingredientes-container">
-                        список ингредиентов
+                        {% for ingredient in ingredients %}
+                            <div class="form__field-item-ingredient" id="ing_{{ forloop.counter }}">
+                                <span> {{ingredient.ingredient.title}} {{ingredient.quantity}}{{ingredient.ingredient.dimension}}</span>
+                                <span class="form__field-item-delete"></span>
+                                <input id="nameIngredient_{{ forloop.counter }}" name="nameIngredient_{{ forloop.counter }}" type="hidden" value="{{ingredient.ingredient.title}}">
+                                <input id="valueIngredient_{{ forloop.counter }}" name="valueIngredient_{{ forloop.counter }}" type="hidden" value="{{ingredient.quantity}}">
+                                <input id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient_{{ forloop.counter }}" type="hidden" value="{{ingredient.ingredient.dimension}}">
+                            </div>
+                        {% endfor %}
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
                     <span class="form__error">{{ form.ingredients.errors }}</span>
@@ -61,7 +69,7 @@
             <div class="form__group">
                 <label for="{{ form.time.id_for_label }}" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
-                    <input type="text" id="{{ form.time.id_for_label }}" name="{{ form.time.name }}" class="form__input">
+                    <input type="text" id="{{ form.time.id_for_label }}" name="{{ form.time.name }}" value="{{ form.time.value|default_if_none:'' }}" class="form__input">
                     <label for="{{ form.time.id_for_label }}" class="form__label">минут</label>
                     <span class="form__error">{{ form.time.errors }}</span>
                 </div>
@@ -69,7 +77,7 @@
             <div class="form__group">
                 <label for="{{ form.description.id_for_label }}" class="form__label">Описание</label>
                 <div class="form__field-group">
-                    <textarea name="{{ form.description.name }}" id="{{ form.description.id_for_label }}" rows="8" class="form__textarea"></textarea>
+                    <textarea name="{{ form.description.name }}" id="{{ form.description.id_for_label }}" rows="8" class="form__textarea">{{ form.description.value|default_if_none:'' }}</textarea>
                     <span class="form__error">{{ form.description.errors }}</span>
                 </div>
             </div>
@@ -84,7 +92,10 @@
                 {{ error|escape }}
             {% endfor %}
             <div class="form__footer">
-                <button type="submit" class="button button_style_blue">Создать рецепт</button>
+                <button type="submit" class="button button_style_blue">{{ labels.button }}</button>
+                {% if labels.del_button %}
+                    <a style="margin-left: 2.5em" href="{{labels.recipe.get_absolute_url}}del/" class="form__ingredient-link">Удалить</a>
+                {% endif %}
             </div>
         </form>
     </div>
