--- a/templates/formRecipe.html
+++ b/templates/formRecipe.html
@@ -84,7 +84,8 @@
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
-                    <input type="file" name="{{ form.image.name }}" id="{{ form.image.id_for_label }}">
+                    <label for="{{ form.image.id_for_label }}" class="form__file-button">Выбрать файл</label>
+                    <input type="file" class="form__file" name="{{ form.image.name }}" id="{{ form.image.id_for_label }}">
                     <span class="form__error">{{ form.image.errors }}</span>
                 </div>
             </div>
