Кнопка покупок на главной

--- a/templates/authorRecipe.html
+++ b/templates/authorRecipe.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Рецепты{% endblock %}
-{% block stylesheet %}
-<link rel="stylesheet" href="{% static 'shoplist/pages/index.css' %}">{% endblock %}
+{% block stylesheet %}<link rel="stylesheet" href="{% static 'shoplist/pages/index.css' %}">{% endblock %}
 {% block main %}
 <main class="main container">
     {% include "includes/main_header.html" %}
