--- a/templates/includes/card_list.html
+++ b/templates/includes/card_list.html
@@ -16,7 +16,11 @@
             </div>
         </div>
         <div class="card__footer">
-            <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+            {% if recipe in user.purchases.all %}
+                <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-plus button__icon"></span>Рецепт добавлен</button>
+            {% else %}
+                <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+            {% endif %}
         </div>
     </div>
     {% empty %}
