--- a/templates/includes/card_list.html
+++ b/templates/includes/card_list.html
@@ -16,13 +16,15 @@
                 <p class="card__text"><span class="icon-user"></span> <a href="{% url 'authorrecipes' recipe.author.username %}" style="color: black">{{ recipe.author }}</a></p>
             </div>
         </div>
-        <div class="card__footer">
-            {% if recipe|is_purch_by:user %}
-                <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-plus button__icon"></span>Рецепт добавлен</button>
-            {% else %}
-                <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-            {% endif %}
-        </div>
+        {% if user.is_authenticated %}
+            <div class="card__footer">
+                {% if recipe|is_purch_by:user %}
+                    <button class="button button_style_light-blue-outline" name="purchases"><span class="icon-plus button__icon"></span>Рецепт добавлен</button>
+                {% else %}
+                    <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+                {% endif %}
+            </div>
+        {% endif %}
     </div>
     {% empty %}
         <li>Добавьте первый рецепт</li>
