--- a/templates/indexNotAuth.html
+++ b/templates/indexNotAuth.html
@@ -5,10 +5,16 @@
 {% block main %}
     <main class="main container">
         {% include "includes/main_header.html" %}
-        {% if author %}
-            <div class="author-subscribe" data-author="{{author.id}}">
-                <p style="padding: 0 0 2em 0;"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></p>
-            </div>
+        {% if user.is_authenticated %}
+            {% if author %}
+                <div class="author-subscribe" data-author="{{author.username}}">
+                    {% if follow %}
+                        <p style="padding: 0 0 2em 0;"><button class="button button_style_light-blue button_size_subscribe button_style_blue" name="subscribe">Отписаться от автора</button></p>
+                    {% else %}
+                        <p style="padding: 0 0 2em 0;"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></p>
+                    {% endif %}
+                </div>
+            {% endif %}
         {% endif %}
         {% include "includes/card_list.html" %}
         {% if page_obj.has_other_pages %}
@@ -17,16 +23,24 @@
     </main>
 {% endblock %}
 {% block javascript %}
+    {% if author %}
+        <script src="{% static 'shoplist/js/components/Favorites.js' %}"></script>
+    {% endif %}
     <script src="{% static 'shoplist/js/components/MainCards.js' %}"></script>
     <script src="{% static 'shoplist/js/components/Purchases.js' %}"></script>
     <script src="{% static 'shoplist/js/config/config.js' %}"></script>
-    <script src="{% static 'shoplist/js/components/CardList.js' %}"></script>
+    {% if not author %}
+        <script src="{% static 'shoplist/js/components/CardList.js' %}"></script>
+    {% endif %}
     <script src="{% static 'shoplist/js/components/Header.js' %}"></script>
     <script src="{% static 'shoplist/js/api/Api.js' %}"></script>
-    <script src="{% static 'shoplist/indexNotAuth.js' %}"></script>
+    {% if not author %}
+        <script src="{% static 'shoplist/indexNotAuth.js' %}"></script>
+    {% endif %}
     {% if author %}
         <script src="{% static 'shoplist/js/components/Subscribe.js' %}"></script>
         <script src="{% static 'shoplist/js/components/AuthorRecipe.js' %}"></script>
         <script src="{% static 'shoplist/authorRecipe.js' %}"></script>
+
     {% endif %}
 {% endblock %}
