--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -42,10 +42,12 @@
                 </ul>
             </div>
             <ul class="single-card__items">
-                {% if purchase %}
-                    <li class="single-card__item"><button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check"></span>Рецепт добавлен</button></li>
-                {% else %}
-                    <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
+                {% if user.is_authenticated %}
+                    {% if purchase %}
+                        <li class="single-card__item"><button class="button button_style_light-blue-outline" name="purchases"><span class="icon-check"></span>Рецепт добавлен</button></li>
+                    {% else %}
+                        <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
+                    {% endif %}
                 {% endif %}
 
                 {% if user.is_authenticated %}
