--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -9,35 +9,41 @@
         <h1 class="main__title">Изменить пароль</h1>
     </div>
         <div class="form-container">
-        <form class="form">
+        <form class="form" method="post">
+            {% csrf_token %}
             <div class="form__group">
                 <label for="{{ form.old_password.id_for_label }}" class="form__label">Старый пароль</label>
                 <div class="form__field-group">
                     <input type="text" name="{{ form.old_password.name }}" id="{{ form.old_password.id_for_label }}" class="form__input">
-                    <span class="form__error"></span>
+                    <span class="form__error">{{ form.old_password.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
-                <label for="{{ form.new_password.id_for_label }}" class="form__label">Новый пароль</label>
+                <label for="{{ form.new_password1.id_for_label }}" class="form__label">Новый пароль</label>
                 <div class="form__field-group">
-                    <input type="password" name="{{ form.new_password.name }}" id="{{ form.new_password.id_for_label }}" class="form__input">
+                    <input type="password" name="{{ form.new_password1.name }}" id="{{ form.new_password1.id_for_label }}" class="form__input">
                     <span class="form__input-info">Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</span>
                     <span class="form__input-info">Ваш пароль должен содержать как минимум 8 символов.</span>
                     <span class="form__input-info">Ваш пароль не может быть одним из широко распространённых паролей.</span>
-                    <span class="form__input-info">Ваш пароль не может состоять только из цифр.</span>
-                    <span class="form__error"></span>
+                    <span class="form__input-info">Ваш пароль не может состоять только из цифр!</span>
+                    <span class="form__error">{{ form.new_password1.errors }}</span>
                 </div>
             </div>
             <div class="form__group">
-                <label for="{{ form.confirm_password.id_for_label }}" class="form__label">Подтверждение нового пароля</label>
+                <label for="{{ form.new_password2.id_for_label }}" class="form__label">Подтверждение нового пароля</label>
                 <div class="form__field-group">
-                    <input type="password" name="{{ form.confirm_password.name }}" id="{{ form.confirm_password.id_for_label }}" class="form__input">
-                    <span class="form__error"></span>
+                    <input type="password" name="{{ form.new_password2.name }}" id="{{ form.new_password2.id_for_label }}" class="form__input">
+                    <span class="form__error">{{ form.new_password2.errors }}</span>
                 </div>
             </div>
-                <div class="form__footer">
-                    <button class="button button_style_blue">Изменить пароль</button>
-                </div>
+            <span class="form__error">
+                {% for error in form.non_field_errors %}
+                    {{ error|escape }}
+                {% endfor %}
+            </span>
+            <div class="form__footer">
+                <button type="submit" class="button button_style_blue">Изменить пароль</button>
+            </div>
         </form>
     </div>
 </main>
