--- a/templates/single-recipe.html
+++ b/templates/single-recipe.html
@@ -27,17 +27,14 @@
                         <li class="single-card__item"><span class="badge badge_style_{{tag.color}}">{{tag.name}}</span></li>
                 {% endfor %}
             </ul>
-<!--            <div class="single-card__items single-card__items_column">-->
-<!--                <p class="single-card__text"><span class="icon-time"></span> {{ object.time }} мин.</p>-->
-<!--                <p class="single-card__text"><span class="icon-user"></span> {{ object.author }}</p>-->
-<!--                <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>-->
-<!--            </div>-->
             <div class="single-card__items single-card__items_column">
                 <p class="single-card__text"><span class="icon-time"></span> {{ object.time }} мин.</p>
                 <ul class="single-card__items">
                     <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> {{ object.author }}</p></li>
                     {% if user.is_authenticated %}
-                    <li class="single-card__item">  <a style="margin-left: 2.5em" href="{{ object.get_absolute_url }}edit/" class="single-card__text">Редактировать рецепт</a></li>
+                        {% if user == object.author %}
+                            <li class="single-card__item">  <a style="margin-left: 2.5em" href="{{ object.get_absolute_url }}edit/" class="single-card__text">Редактировать рецепт</a></li>
+                        {% endif %}
                     {% endif %}
                 </ul>
             </div>
