--- a/templates/includes/main_header.html
+++ b/templates/includes/main_header.html
@@ -1,5 +1,11 @@
 <div class="main__header">
-    <h1 class="main__title">Рецепты</h1>
+    <h1 class="main__title">
+        {% if author == user %}
+            Мои рецепты
+        {% else %}
+            Рецепты {{ author }}
+        {% endif %}
+    </h1>
     <ul class="tags">
         <li class="tags__item">
             <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange
