--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -15,7 +15,7 @@
             <div class="form__group">
                 <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
                 <div class="form__field-group">
-                    <input type="text" name="{{ field.name }}" id="{{ field.id_for_label }}" class="form__input">
+                    <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" id="{{ field.id_for_label }}" class="form__input">
                     <span class="form__error"> {{ field.errors }} </span>
                 </div>
             </div>
