--- a/templates/single-recipe.html
+++ b/templates/single-recipe.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'shoplist/pages/single.css' %}">{% endblock %}
 {% block main %}
 <main class="main container">
-    <div class="single-card" data-id="{{ object.id }}" data-author="{{ object.author }}">
+    <div class="single-card" data-id="{{ object.id }}" data-author="{{ object.author.username }}">
         <img src="/media/{{ recipe.image }}" alt="{{ object.title }}" class="single-card__image">
         <div class="single-card__info">
             <div class="single-card__header-info">
