--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -12,7 +12,15 @@
                     {% url 'favorite' as current_url %}
                     <li class="nav__item {% if current_url == request.path %} nav__item_active {% endif %}"><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
                     {% url 'shoplist' as current_url %}
-                    <li class="nav__item nav__item_disabled {% if current_url == request.path %} nav__item_active {% endif %}"><a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></a></li>
+                    <li class="nav__item
+                        {% if user.purchases.count == 0 %}
+                            nav__item_disabled
+                        {% endif %}
+                        {% if current_url == request.path %}
+                            nav__item_active
+                        {% endif %}">
+                        <a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></a>
+                    </li>
                 {% endif %}
             </ul>
             <ul class="nav__items list">
