--- a/templates/single-recipe.html
+++ b/templates/single-recipe.html
@@ -48,10 +48,12 @@
                 {% endif %}
 
                 {% if user.is_authenticated %}
-                    {% if follow %}
-                        <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe button_style_blue" name="subscribe">Отписаться от автора</button></li>
-                    {% else %}
-                        <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+                    {% if object.author != user %}
+                        {% if follow %}
+                            <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe button_style_blue" name="subscribe">Отписаться от автора</button></li>
+                        {% else %}
+                            <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+                        {% endif %}
                     {% endif %}
                 {% endif %}
             </ul>
