--- a/templates/includes/main_header.html
+++ b/templates/includes/main_header.html
@@ -7,19 +7,21 @@
             Рецепты {{ author }}
         {% endif %}
     </h1>
-    <ul class="tags">
-        {% for tag in all_tags %}
-            <li class="tags__item">
-                <a id="{{ tag.title }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}
-                    {% if tag.title in tags %}
-                        tags__checkbox_active
-                    {% else %}
-                        tags__checkbox
-                    {% endif %}
-                    "
-                   href="{{ request.path }}?tag={{ tag.title }}"></a>
-                <span class="tags__label">{{ tag.name }}</span>
-            </li>
-        {% endfor %}
-    </ul>
+    {% if page_obj %}
+        <ul class="tags">
+            {% for tag in all_tags %}
+                <li class="tags__item">
+                    <a id="{{ tag.title }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}
+                        {% if tag.title in tags %}
+                            tags__checkbox_active
+                        {% else %}
+                            tags__checkbox
+                        {% endif %}
+                        "
+                       href="{{ request.path }}?{{ request|set_tag_qs:tag.title }}"></a>
+                    <span class="tags__label">{{ tag.name }}</span>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </div>
