--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -18,8 +18,14 @@
                         {% endif %}
                         {% if current_url == request.path %}
                             nav__item_active
-                        {% endif %}">
-                        <a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></a>
+                        {% endif %}
+                        ">
+                        <a href="{% url 'shoplist' %}" class="nav__link link">Список покупок</a>
+                        <span class="badge badge_style_blue nav__badge" id="counter">
+                            {% if user.purchases.count %}
+                                {{ user.purchases.count }}
+                            {% endif %}
+                        </span>
                     </li>
                 {% endif %}
             </ul>
