--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -15,7 +15,7 @@
                 <p><input type="submit" value="Изменить пароль"/></p>
             </form>
         {% else %}
-            <p class="custom-text-block">The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+            <p class="custom-text-block">Ссылка на сброс пароля недействительна, возможно, потому, что она уже использовалась. Пожалуйста, запросите новый сброс пароля.</p>
         {% endif %}
     </div>
 </main>
