--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -7,8 +7,8 @@
 {% block main %}
 <main class="main container">
     <div class="custom-center-block">
-        <p class="custom-text-block">We've emailed you instructions for setting your password.</p>
-        <p class="custom-text-block">If you don't receive an email, please make sure you've entered the address you registered with.</p>
+        <p class="custom-text-block">Мы отправили вам по электронной почте инструкции по установке пароля.</p>
+        <p class="custom-text-block">Если вы не получили электронное письмо, пожалуйста, убедитесь, что вы ввели адрес, по которому зарегистрировались.</p>
     </div>
 </main>
 {% endblock %}
